# opengl-template

./: CMakeLists.txt  Readme.md
src/: main.cpp
